--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11722 Implementation of a Mixin to support tryton objects and integers comparison
 * FEA#11623 Add identity management APIs
 * BUG#11657 Remove 'api' from test database names since it is automatically injected and break cache alignment with scenarios
 * FEA#11352 Allow to disable batch by configuration
