--- a/modules/contract_insurance/locale/fr.po
+++ b/modules/contract_insurance/locale/fr.po
@@ -14,6 +14,14 @@ msgstr ""
 
 msgctxt "error:contract.covered_element:"
 msgid ""
+"You are trying to create a covered element that overlaps with an old covered"
+" element"
+msgstr ""
+"Vous essayez de créer un élément couvert pour un tiers dont les dates de "
+"début et de fin chevauchent un autre élément couvert pour le même tiers"
+
+msgctxt "error:contract.covered_element:"
+msgid ""
 "You are trying to create duplicate covered elements on contract: %s"
 msgstr ""
 "Vous essayez de créer un doublon d'éléments couverts sur le contrat: %s"
