--- a/modules/coog_core/locale/fr.po
+++ b/modules/coog_core/locale/fr.po
@@ -325,6 +325,10 @@ msgctxt "field:event.type.action,active:"
 msgid "Active"
 msgstr "Actif"
 
+msgctxt "field:event.type.action,at_commit:"
+msgid "At The Last Moment"
+msgstr "Au dernier moment"
+
 msgctxt "field:event.type.action,code:"
 msgid "Code"
 msgstr "Code"
@@ -1484,6 +1488,19 @@ msgid ""
 msgstr ""
 "Si l'utilisateur appartient à l'un des groupes liés au type de l'évènement, "
 "il peut le voir par défaut dans les logs d'évènements."
+
+msgctxt "help:event.type.action,at_commit:"
+msgid ""
+"If set, this ensure the action will be executed at the last "
+"moment and that everything has been executed correctly before "
+"processing this action. This could be usefull for report "
+"generation and avoid documents to be sent whereas something "
+"went wrong during processing."
+msgstr ""
+"Si coché, assure que l'action sera executée au dernier moment et que "
+"tout ce qui précède à bien été executé correctement. Cela"
+" peut être utile lors de la génération des documents et éviter leur envoi"
+" si quelque chose s'est mal déroulé au préalable."
 
 msgctxt "help:event.type.action,pyson_condition:"
 msgid ""
