--- a/modules/coog_core/doc/fr/CHANGELOG
+++ b/modules/coog_core/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11664 Ajout de configuration sur les actions par type d'événement afin d'exécuter l'action avant le commit de la transaction
 * BUG#11722 Implémentation d'une Mixin pour supported la comparaison d'objets tryton avec des entiers
 * FEA#11623 Ajout de la gestion d'identités pour les API
 * BUG#11657 Retrait de 'api' dans le nom des dumps de base de test afin de qu'elles puissent être réutilisées par les scenarios
