account_payment_sepa_cog: Allow to force SMNDA flag (#2816)
Fix #11160

--- a/modules/account_payment_sepa_cog/doc/en/CHANGELOG
+++ b/modules/account_payment_sepa_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11160 Allow to force the use of the SMNDA flag for sepa messages through configuration
 * FEA#11094 Allow to have a single snapshot for the cancel moves of all payments failed by the same CAMT054 file
 
 Version 2.4 - 2019-04-12
