contract_group: Properly use "contract" on covered element to determine its state (#2820)
related to: organization feature

Fix #11766

--- a/modules/contract_group/doc/en/CHANGELOG
+++ b/modules/contract_group/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11766 Use contract field of organization's covered elements to determine whether it is terminated or not
+
 Version 2.4 - 2019-04-12
 * FEA#11077 Allow to cancel an enrollment
 * BUG#10784 Allow to use sub covered elements relate from enrollment's view form
