--- a/modules/endorsement_insurance_invoice/doc/fr/CHANGELOG
+++ b/modules/endorsement_insurance_invoice/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11726 Alimentations des payeurs possibles avenant de modification des paramètres de quittancement
+
 Version 2.4 - 2019-04-12
 * BUG#10920 Les changements de quittancement ne doivent pas être propagés au contrats déclinés
 
