--- a/modules/contract_insurance_health_fr/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_health_fr/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Autorisation de l'ajout de données complémentaires sur les tiers est ayant droit
 * BUG#11674 Formater les informations lu depuis le fichier pour pouvoir les gerer avec type unicode
 
 Version 2.4 - 2019-04-12
