claim_life: Add claim number to error message (#2817)
This can be used to ease identification of bad data while
theoretical covered element still exist.

Fix #11723

--- a/modules/claim_life/doc/en/CHANGELOG
+++ b/modules/claim_life/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11723 Include claim rec_name in theoretical covered element error message
 * BUG#11465 Claim beneficiary extra data are not initialized when creating a beneficiary
 
 Version 2.4 - 2019-04-12
