claim_indemnification: Remove deductible calculation from init_from_loss (#2811)
Fix #11266

--- a/modules/claim_indemnification/doc/en/CHANGELOG
+++ b/modules/claim_indemnification/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11266 Separate initial deductible creation from service initialization
 * OTH#00000 Fix crash when trying to validate an indemnification
 
 Version 2.4 - 2019-04-12
