contract: Add configuration and batch to automatically end contract options (#2805)
* contract: Add configuration and batch to automatically end contract options

Fix #11698

--- a/modules/contract/doc/en/CHANGELOG
+++ b/modules/contract/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11698 Add coverage configuration and batch to automatically terminate contract options which the automatic end date is exceeded
 * BUG#11523 Manage void options in order to reactivate correctly void contrat
 
 Version 2.4 - 2019-04-12
