--- a/modules/contract/locale/fr.po
+++ b/modules/contract/locale/fr.po
@@ -504,7 +504,7 @@ msgstr "Tiers"
 
 msgctxt "field:contract.contact,rec_name:"
 msgid "Record Name"
-msgstr "Nom"
+msgstr "Nom de l'enregistrement"
 
 msgctxt "field:contract.contact,type:"
 msgid "Type"
@@ -1262,6 +1262,10 @@ msgctxt "field:offered.configuration.default_quote_number_sequence,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "field:offered.option.description.ending_rule,automatic_sub_status:"
+msgid "Automatic Sub Status"
+msgstr "Sous statut automatique"
+
 msgctxt "field:offered.product,contract_data_rule:"
 msgid "Contract Data Rule"
 msgstr "Règle de données du contrat"
@@ -1408,6 +1412,13 @@ msgstr ""
 "conditions d'une souscription de contrat. Sinon, la date de conditions sera "
 "la date d'effet."
 
+msgctxt "help:offered.option.description.ending_rule,automatic_sub_status:"
+msgid ""
+"Automatic sub status which will be applied on automatilcally terminated "
+"options"
+msgstr ""
+"Ce sous statut sera appliqué sur les options résiliées automatiquement"
+
 msgctxt "help:offered.product,contract_data_rule:"
 msgid ""
 "Rule called at contract creation in order to initialize any contract field"
@@ -1470,6 +1481,10 @@ msgstr "Notifications"
 msgctxt "model:contract.option,name:"
 msgid "Contract Option"
 msgstr "Garantie"
+
+msgctxt "model:contract.option.terminate,name:"
+msgid "Terminate Contract Option"
+msgstr "Résiliation des garanties de contrat"
 
 msgctxt "model:contract.option.version,name:"
 msgid "Contract Option Version"
@@ -1563,6 +1578,10 @@ msgstr "Résiliation du contrat"
 msgctxt "model:event.type,name:event_unhold_contract"
 msgid "Unhold Contract"
 msgstr "Remise en vigueur après suspension"
+
+msgctxt "model:event.type,name:automatic_terminate_option"
+msgid "Option Terminate Automatically"
+msgstr "Résiliation de garantie automatique"
 
 msgctxt "model:event.type,name:event_void_contract"
 msgid "Void Contract"
