--- a/modules/claim_prest_ij_service/doc/en/CHANGELOG
+++ b/modules/claim_prest_ij_service/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11675 Allow manual individual subscription request for persons affiliated via a subsidiary
+
 Version 2.4 - 2019-04-12
 * FEA#10991 Reorder BPIJ view
 * BUG#10810 Ignore undeclared subscription when integrating a CR file
