claim_indemnification: block lines to pay when payback method is immediate (#2741)
Fix #11431

--- a/modules/claim_indemnification/locale/fr.po
+++ b/modules/claim_indemnification/locale/fr.po
@@ -629,6 +629,10 @@ msgctxt "field:claim,icon:"
 msgid "Icon"
 msgstr "Icône"
 
+msgctxt "field:claim,immediate_payback:"
+msgid "Immediate Payback"
+msgstr "Régularisation immédiate"
+
 msgctxt "field:claim,indemnifications_details:"
 msgid "Indemnifications Details"
 msgstr "Détails des indemnisations"
@@ -1568,6 +1572,14 @@ msgstr ""
 "Produits comptables disponibles lorsque l'on créé une indemnisation. Le compte "
 "comptable et les taxes qui s'appliquent à l'indemnisation sont définis "
 "dans un produit comptable. "
+
+msgctxt "help:claim,immediate_payback:"
+msgid ""
+"Set to true if at least one indemnification is has an immediate payback "
+"method"
+msgstr ""
+"Vrai lorsqu'au moins une des indemnisations du sinistre est non payée, "
+"annulée, et avec une méthode de régularisation immédiate"
 
 msgctxt "help:claim.configuration,sorting_method:"
 msgid "This value will be used to sort indemnifications by start date"
