--- a/modules/party_cog/locale/fr.po
+++ b/modules/party_cog/locale/fr.po
@@ -11,16 +11,16 @@ msgid ""
 "The following keys will be removed from all existing data in the database, this may take some time:\n"
 "%(codes)s"
 msgstr ""
-"Toutes les occurences des clefs suivantes seront retirées de la base de donnée, cela peut prendre du temps:"
-"%(codes)s"
+"Toutes les occurences des clefs suivantes seront retirées de la base de "
+"donnée, cela peut prendre du temps:%(codes)s"
 
 msgctxt "error:country.address.line:"
 msgid ""
 "The following keys will be renamed in all existing data in the database, this may take some time:\n"
 "%(codes)s"
 msgstr ""
-"Toutes les occurences des clefs suivantes seront renommées en base de donnée, cela peut prendre du temps:"
-"%(codes)s"
+"Toutes les occurences des clefs suivantes seront renommées en base de "
+"donnée, cela peut prendre du temps:%(codes)s"
 
 msgctxt "error:country.zip:"
 msgid ""
@@ -161,6 +161,10 @@ msgstr "Configuration des lignes d'adresse"
 msgctxt "field:country.country,address_lines:"
 msgid "Address Lines"
 msgstr "Lignes d'adresse"
+
+msgctxt "field:ir.api.identity,party:"
+msgid "Party"
+msgstr "Tiers"
 
 msgctxt "field:ir.test_case,adult_age_max:"
 msgid "Maximum age for adults"
@@ -474,6 +478,10 @@ msgctxt "field:party.party,identifiers:"
 msgid "Identifiers"
 msgstr "Identifiants"
 
+msgctxt "field:party.party,identities:"
+msgid "Identities"
+msgstr ""
+
 msgctxt "field:party.party,is_anonymized:"
 msgid "Is Anonymized"
 msgstr "Est anonymisé"
@@ -522,6 +530,10 @@ msgctxt "field:party.party.lang,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "field:party.relation,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
 msgctxt "field:party.relation,end_date:"
 msgid "End Date"
 msgstr "Date de Fin"
@@ -537,6 +549,10 @@ msgstr "Date d'Effet"
 msgctxt "field:party.relation,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
+
+msgctxt "field:party.relation.all,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
 
 msgctxt "field:party.relation.all,end_date:"
 msgid "End Date"
@@ -906,9 +922,21 @@ msgctxt "help:country.address.line,selection_sorted:"
 msgid "If the selection must be sorted on label"
 msgstr "Si la sélection doit être triée par le libéllé"
 
+msgctxt "help:ir.api.identity,party:"
+msgid ""
+"If set, the identity will be bound to this party, which will limit what may "
+"be available in consultation APIs"
+msgstr ""
+"Si rensigné, l'identité sera liée à ce tiers, ce qui limitera les "
+"informations qui lui seront accessibles"
+
 msgctxt "help:party.configuration,party_lang:"
 msgid "The default language for new parties."
 msgstr "La valeur définie initialisera la langue sur les tiers"
+
+msgctxt "help:party.party,identities:"
+msgid "The list of identities which will be associated to this party"
+msgstr "La liste des identités associées à ce tiers"
 
 msgctxt "model:country.address.line,name:"
 msgid "Country Address Line"
@@ -961,6 +989,10 @@ msgstr "Synthèse"
 msgctxt "model:ir.action,name:act_menu_open"
 msgid "Open Party Synthesis Menu"
 msgstr "Ouvrir la synthèse"
+
+msgctxt "model:ir.action,name:act_open_party_api_identity"
+msgid "API Identity"
+msgstr "Identité API"
 
 msgctxt "model:ir.action,name:act_party_identifier_type_form"
 msgid "Party Identifier Type"
