--- a/modules/country_hexaposte/doc/en/CHANGELOG
+++ b/modules/country_hexaposte/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#11654 Save insee code in zip code when integrating hexapost format
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
