--- a/modules/country_hexaposte/doc/fr/CHANGELOG
+++ b/modules/country_hexaposte/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#11654 Ajout de code insee lors de l'intégration du format hexapost
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
