--- a/modules/report_engine_email/doc/en/CHANGELOG
+++ b/modules/report_engine_email/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11811 Fix duplicated translation of generated_code
 * BUG#11420 Fix crash on email generation if attachment and the attachment report is not defined on product
 * BUG#11224 Fix crash when printing a mail with attachment due to erroneous encoding since python 3
 * BUG#11087 Fix crash when printing a mail with manual editing
