rule_engine: Allow to use genshi expression in rule engine description (#2825)
fix #11782

--- a/modules/contract_coverage_amount/locale/fr.po
+++ b/modules/contract_coverage_amount/locale/fr.po
@@ -125,18 +125,24 @@ msgstr ""
 "La règle doit retourner une liste des montants de couverture disponible"
 
 msgctxt "help:offered.option.description,coverage_amount_rules:"
-msgid "Define how a coverage amount will be required and filled for the option"
+msgid ""
+"Define how a coverage amount will be required and filled for the option"
 msgstr ""
-"Définit si un montant de couverture est requis pour cette garantie "
-"et les montants disponibles"
-
-msgctxt "help:rule_engine,description:"
-msgid "Functional description of the rule"
-msgstr "Description fonctionnelle de la règle"
+"Définit si un montant de couverture est requis pour cette garantie et les "
+"montants disponibles"
 
 msgctxt "model:offered.coverage_amount.rule,name:"
 msgid "Coverage Amount Rule"
 msgstr "Règle de montant de couverture"
+
+msgctxt "model:rule_engine,description:coverage_amount_per_range"
+msgid ""
+"Possible coverage amount are computed per ${coverage_amount_range} range "
+"with a ${min_amount} minimum amount and ${max_amount} maximum amount."
+msgstr ""
+"Les montants de couverture possibles sont calculés par tranche de "
+"${coverage_amount_range}, en partant de ${min_amount} et avec une borne "
+"supérieure de ${max_amount}."
 
 msgctxt "model:rule_engine,name:coverage_amount_per_range"
 msgid "Coverage Amount Per Range Rule"
