--- a/modules/contract_term_renewal/locale/fr.po
+++ b/modules/contract_term_renewal/locale/fr.po
@@ -161,6 +161,20 @@ msgctxt "model:offered.product.term_renewal_rule,name:"
 msgid "Product Term Renewal Rule"
 msgstr "Règle de terme/renouvellement"
 
+msgctxt "model:rule_engine,description:product_term_renewal_sync_given_date"
+msgid ""
+"Contracts will be renewed each year the ${given_day} day of the "
+"${given_month} month."
+msgstr ""
+"Les contrats sont renouvellés chaque année le jour ${given_day} du mois "
+"${given_month}"
+
+msgctxt "model:rule_engine,description:product_term_renewal_sync_sub_date"
+msgid "Contracts will be renewed each year at the contract anniversary date."
+msgstr ""
+"Les contrats sont renouvellés chaque année à la date anniversaire de la "
+"prise d'effet du contrat"
+
 msgctxt "model:rule_engine,name:product_term_renewal_sync_given_date"
 msgid "Product Term Renewal In Sync With Given Date"
 msgstr "Renouvellement synchronisé avec une date donnée"
