--- a/modules/offered_insurance/locale/fr.po
+++ b/modules/offered_insurance/locale/fr.po
@@ -1140,6 +1140,21 @@ msgctxt "model:offered.validate,name:"
 msgid "Product Validation Batch"
 msgstr "Batch de validation produit"
 
+msgctxt "model:rule_engine,description:option_end_date_rule"
+msgid "The end rule is based on the insured age.\n"
+"The coverage will terminate at age of ${max_age_for_option} (included).\n"
+"${'The age used is the age at subscription' if age_kind =='real' else "
+"('The age is synchonized with the %s day of the %s month' % (given_day, "
+"given_month) if age_kind == 'at_given_day_of_year' else 'The age used is "
+"based on the first day of the month following the birth')}."
+msgstr "La règle de résiliation est basée sur l'âge de l'assuré.\n"
+"La résiliation de la garantie se fera à l'âge de ${max_age_for_option} (inclus).\n"
+"${'L âge utilisé est l âge à la date de souscription' if age_kind =='real' "
+"else ('L âge utilisé est l âge synchronisé par rapport au jour %s et au "
+"mois %s' % (given_day, given_month) if age_kind == 'at_given_day_of_year' "
+"else 'L âge est l aĝe au premier jour du mois suivant le mois de "
+"naissance.')}"
+
 msgctxt "model:rule_engine,name:option_end_date_rule"
 msgid "Option End Date Rule"
 msgstr "Règle de résiliation d'une garantie"
