--- a/modules/rule_engine/locale/fr.po
+++ b/modules/rule_engine/locale/fr.po
@@ -203,6 +203,10 @@ msgctxt "field:rule_engine,functions_used:"
 msgid "Used Functions"
 msgstr "Fonctions utilisées"
 
+msgctxt "field:rule_engine,genshi_evaluated_description:"
+msgid "Rule Description Genshi Evaluated"
+msgstr "Description de la règle évaluée avec Genshi"
+
 msgctxt "field:rule_engine,id:"
 msgid "ID"
 msgstr "ID"
@@ -924,8 +928,13 @@ msgid "XML Id"
 msgstr "Identifiant XML"
 
 msgctxt "help:rule_engine,description:"
-msgid "Functional description of the rule"
-msgstr "Description fonctionnelle de la règle"
+msgid ""
+"Functional description of the rule. The description can used the rule "
+"parameter entered with the following synthax ${parameters_code}"
+msgstr ""
+"Description fonctionnelle de la règle. Les paramètres de la règle peuvent "
+"être utilisées et valorisées dans la description en fonction du paramétrage "
+"en utilisant la syntaxe ${parameters_code}."
 
 msgctxt "help:rule_engine,tags:"
 msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
