--- a/modules/offered_eligibility/locale/fr.po
+++ b/modules/offered_eligibility/locale/fr.po
@@ -70,6 +70,21 @@ msgctxt "model:offered.option.description.eligibility_rule,name:"
 msgid "Option Description Eligibility Rule"
 msgstr "Règle d'éligbilité à la garantie"
 
+msgctxt "model:rule_engine,description:option_eligibility_on_age"
+msgid "The eligibility rule is based on the insured birth date.\n"
+"The maximum age is ${max_age_for_option} (included).\n"
+"${'The age used is the age at subscription' if age_kind =='real' else "
+"('The age is synchonized with the %s day of the %s month' % (given_day, "
+"given_month) if age_kind == 'at_given_day_of_year' else 'The age used is "
+"based on the first day of the month following the birth')}."
+msgstr "La règle d'éligibilité est basé sur l'âge de l'assuré.\n"
+"L'âge maximum est ${max_age_for_option} (inclus).\n"
+"${'L âge utilisé est l âge à la date de souscription' if age_kind =='real' "
+"else ('L âge utilisé est l âge synchronisé par rapport au jour %s et au "
+"mois %s' % (given_day, given_month) if age_kind == 'at_given_day_of_year' "
+"else 'L âge est l aĝe au premier jour du mois suivant le mois de "
+"naissance.')}"
+
 msgctxt "model:rule_engine,name:option_eligibility_on_age"
 msgid "Option Eligibility Rule"
 msgstr "Règle d'éligibilité d'une garantie"
