--- a/modules/country_hexaposte/doc/fr/CHANGELOG
+++ b/modules/country_hexaposte/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Correction de l'unicité du zip code et de sa mise à jour via l'assistant
 * FEA#11654 Ajout de code insee lors de l'intégration du format hexapost
 
 Version 2.4 - 2019-04-12
