country_hexaposte: Fix missing return in zip code get_rec_name (#2838)

--- a/modules/country_hexaposte/doc/fr/CHANGELOG
+++ b/modules/country_hexaposte/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Manque un return dans le get_rec_name du zip code
 * OTH#00000 Correction de l'unicité du zip code et de sa mise à jour via l'assistant
 * FEA#11654 Ajout de code insee lors de l'intégration du format hexapost
 
