--- a/modules/claim_prest_ij_service/doc/en/CHANGELOG
+++ b/modules/claim_prest_ij_service/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11799 Fix subscription creation batch for person who already has a subscription for an other siren 
 * BUG#11675 Allow manual individual subscription request for persons affiliated via a subsidiary
 
 Version 2.4 - 2019-04-12
