--- a/modules/health/doc/fr/CHANGELOG
+++ b/modules/health/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#0000 L'affichage du rang de naissance est déplacé après la saisie du numéro de sécurité sociale.
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 * BUG#9882 Utilisation du champ date du complement santé afin de récuperer la derniere version valide de cet objet
